--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-addons-update": "^15.6.2",
     "react-color": "^2.17.3",
     "react-copy-to-clipboard": "^5.0.1",
+    "react-csv": "^1.1.2",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.10.2",
     "react-localization": "^1.0.15",
