--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "playthem",
   "main": "index.js",
-  "homepage": "https://oksanacoder.github.io/frontend-constructor-nexo/#/login",
+  "homepage": "https://oksanacoder.github.io/frontend-constructor-nexo",
   "license": "",
   "author": "",
   "repository": {
