--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
   },
   "private": true,
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "lint:write": "eslint --debug src/ --fix",
-    "prettier": "prettier --write src/**/*.js",
-    "start": "webpack-dev-server --mode development --open",
-    "build": "webpack --mode production",
-    "build:dev": "webpack --mode development"
+    "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src",
+    "watch-css": "npm run build-css && node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/ --watch --recursive",
+    "start-js": "react-scripts start",
+    "start": "npm-run-all -p watch-css start-js",
+    "build-js": "react-scripts build",
+    "build": "npm-run-all build-css build-js",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   },
   "husky": {
     "hooks": {
@@ -42,12 +43,15 @@
     "autoprefixer": "^9.6.1",
     "axios": "^0.18.1",
     "classnames": "^2.2.6",
+    "eslint-config-airbnb": "^18.2.1",
     "formik": "^1.5.8",
     "history": "^4.7.2",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "material-ui-popup-state": "^1.4.1",
     "moment": "^2.24.0",
+    "node-sass-chokidar": "^1.5.0",
+    "npm-run-all": "^4.1.5",
     "react": "^16.10.2",
     "react-addons-update": "^15.6.2",
     "react-color": "^2.17.3",
@@ -58,58 +62,18 @@
     "react-localization": "^1.0.15",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
+    "react-scripts": "^4.0.3",
     "react-transition-group": "^4.2.2",
-    "redux": "^4.0.4",
+    "redux": "^4.1.0",
     "redux-axios-middleware": "^4.0.1",
     "redux-logger": "^3.0.6",
+    "typescript": "^4.3.4",
     "uuid": "^3.3.3",
     "yup": "^0.26.10"
   },
   "devDependencies": {
-    "@babel/core": "^7.5.5",
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/plugin-transform-runtime": "^7.5.5",
-    "@babel/preset-env": "^7.5.5",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/runtime": "^7.5.5",
-    "babel-eslint": "^10.0.3",
-    "babel-loader": "^8.0.6",
-    "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^3.2.0",
-    "eslint": "^6.5.1",
-    "eslint-config-airbnb": "^18.0.1",
-    "eslint-config-prettier": "^6.4.0",
-    "eslint-config-standard": "^14.1.0",
-    "eslint-loader": "^3.0.2",
-    "eslint-plugin-babel": "^5.3.0",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-node": "^10.0.0",
-    "eslint-plugin-prettier": "^3.1.1",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-react": "^7.16.0",
-    "eslint-plugin-react-hooks": "^1.7.0",
-    "eslint-plugin-standard": "^4.0.1",
-    "favicons-webpack-plugin": "^1.0.2",
-    "file-loader": "^4.2.0",
-    "gh-pages": "^3.2.3",
-    "html-webpack-plugin": "^3.2.0",
-    "husky": "^3.0.9",
-    "lint-staged": "^9.4.2",
-    "mini-css-extract-plugin": "^0.8.0",
-    "node-sass": "^4.12.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "path": "^0.12.7",
-    "postcss-loader": "^3.0.0",
-    "prettier": "^1.18.2",
-    "pretty-quick": "^2.0.0",
-    "sass-loader": "^8.0.0",
-    "style-loader": "^1.0.0",
-    "uglifyjs-webpack-plugin": "^2.2.0",
-    "url-loader": "^2.2.0",
-    "webpack": "^4.41.1",
-    "webpack-cli": "^3.3.9",
-    "webpack-dev-server": "^3.8.2"
+    "eslint": "^7.29.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-react": "^7.24.0"
   }
 }
