--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "playthem",
   "main": "index.js",
-  "homepage": "https://oksanacoder.github.io/frontend-constructor-nexo",
   "license": "",
   "author": "",
   "repository": {
@@ -19,7 +18,8 @@
     "build-js": "react-scripts build",
     "build": "npm-run-all build-css build-js",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "eslint": "eslint"
   },
   "husky": {
     "hooks": {
