--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "autoprefixer": "^9.6.1",
     "axios": "^0.18.1",
     "classnames": "^2.2.6",
-    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-airbnb": "18.2.1",
     "formik": "^1.5.8",
     "history": "^4.7.2",
     "jsonwebtoken": "^8.5.1",
@@ -72,8 +72,11 @@
     "yup": "^0.26.10"
   },
   "devDependencies": {
-    "eslint": "^7.29.0",
+    "eslint": "^7.2.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-react": "^7.24.0"
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^1.7.0"
   }
 }
